# monnify-studio

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
apps/api/monnify_studio/: __init__.py  ajo.py  config.py  credentials.py  money.py  notifications.py  onboarding.py  store.py
apps/api/monnify_studio/ai/: __init__.py  chat.py  composer.py  design.py  explain.py  fidelity.py  guardrails.py  llm.py  models.py  moni.py  providers.py  schema.py
apps/api/monnify_studio/analysis/: __init__.py  engine.py  rules.py
apps/api/monnify_studio/api/: __init__.py  app.py  main.py  routes.py  seed.py
apps/api/monnify_studio/artifacts/: __init__.py  generator.py
apps/api/monnify_studio/codegen/: __init__.py  python.py
apps/api/monnify_studio/executor/: __init__.py  (+5 more)
apps/api/scripts/: demo_analyze.py  demo_observability.py  demo_remediate.py  demo_sandbox.py  moni_eval.py
apps/api/tests/: test_ajo_and_totals.py  test_ajo_cycle.py  test_analyzer.py  test_any_flow_dashboard.py  test_api.py  test_artifacts.py  test_assistant.py  test_balance_guard.py  test_codegen.py  test_compose_reliability.py  test_compose_robustness.py  test_composer.py  test_credentials.py  test_custom_code_node.py  test_executor.py  test_explain.py  test_grounding.py  test_human_trace.py  test_intent_fidelity.py  test_invoices.py  test_mon011.py  test_money.py  test_moni.py  test_monnify_client.py  test_notifications.py  test_notify_email_fallback.py  test_observability.py  test_onboarding.py  test_orders.py  test_payroll.py  test_payroll_outflow_dashboard.py  test_payroll_roster.py  test_providers.py  test_real_data_flow.py  test_refine.py  test_remediation.py  test_request_templates.py  test_sandbox.py  test_seed.py  test_share_links.py  (+4 more)
(+161 files in other folders)
